# TrueTime

./: .gitignore  Dockerfile  LICENSE  PRIVACY.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CreateStopwatchForm.test.tsx  CreateStopwatchForm.tsx  KeyboardShortcutsHelp.test.tsx  KeyboardShortcutsHelp.tsx  SettingsPanel.tsx  StopwatchCard.test.tsx  StopwatchCard.tsx  StopwatchList.test.tsx  StopwatchList.tsx  UpdateBanner.tsx
src/hooks/: useAppUpdater.ts  useLiveElapsed.ts  useShowMilliseconds.ts  useStopwatches.ts
src/lib/: formatTime.test.ts  formatTime.ts  isDialogOpen.test.ts  isDialogOpen.ts  isTypingTarget.test.ts  isTypingTarget.ts  stopwatchIO.test.ts  stopwatchIO.ts
src/types/: stopwatch.ts
