[package]
name = "truetime"
version = "1.3.0"
description = "TrueTime — a minimal cross-platform stopwatch app"
edition = "2021"

[lib]
name = "truetime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
